--- a/src/styles/gym.css
+++ b/src/styles/gym.css
@@ -1,8 +1,17 @@
 .mapContainer{
-    height: 100vh;
-    width: 100%;
+    height: 85vh;
+    width: 90%;
+    left: 5%;
 }
 .combobox-input{
-    width: 25%;
+    width: 100%;
     padding: 1px;
 }
+.placeContainer {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    width: 300px;
+  }
