--- a/src/js/component/Calendar/calendar.css
+++ b/src/js/component/Calendar/calendar.css
@@ -1,7 +1,9 @@
 .dates {
     text-align: center;
     width: 80px;
-    border: 1px solid white;
+    border: 1px solid black;
+    background-color: #2a9fd6;
+    color: black;
 }
 
 .row {
@@ -12,6 +14,7 @@
     text-align: center;
     width: 300px;
     border: 1px solid white;
+  
 }
 
 
@@ -23,8 +26,12 @@
     text-align: center;
     width: 80px;
     min-height: 100px;
-    border: 1px solid white;
+    border: 1px solid black;
     margin-bottom: 20px;
+    background-color: white;
+    color: black;
+ 
+    
     
 }
 
@@ -56,3 +63,4 @@
 .btn-danger {
     font-size: xx-small;
 }
+
