--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,12 +1,13 @@
 #quote {
-    color:rgb(61, 61, 235);
-    text-shadow: 1px 1px 4px black, 1px -1px 4px black, -1px 1px 4px black, -1px -1px 4px black;
+    color:white;
+    text-shadow: 1px 1px 10px black
+    , 1px -1px 10px black, -1px 1px 10px black, -1px -1px 10px black;
 
     
 }
 
 #quote2 {
-    color:rgb(61, 61, 235);
+    color: white;
     text-shadow: 1px 1px 1px black, 1px -1px 1px black, -1px 1px 1px black, -1px -1px 1px black;
 }
 
@@ -17,8 +18,10 @@
 }
 
 #bar {
-    color: white;
+    color: black;
     height: 3px;
+    
     
 
 }
+
