--- a/src/js/component/Calendar/calendar.css
+++ b/src/js/component/Calendar/calendar.css
@@ -8,6 +8,7 @@
 
 .row {
     height: fit-content;
+    
 }
 
 .month {
@@ -27,7 +28,7 @@
     width: 80px;
     min-height: 100px;
     border: 1px solid black;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     background-color: white;
     color: black;
  
